[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Ball/Ball.png" type="Texture" id=1]
[ext_resource path="res://Objects/Ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://Objects/Ball/Kick.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Ball" type="RigidBody2D"]
collision_layer = 2
collision_mask = 7
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Reset" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 300.0
bus = "Sound"

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Reset" to="." method="_on_Reset_timeout"]
